<resources>
    <string name="app_name">Uperf</string>

    <string name="module_name">模块名称: %s</string>
    <string name="module_author">模块作者: %s</string>
    <string name="module_version">模块版本: %s</string>

    <string name="auto">动态</string>
    <string name="powersave">省电</string>
    <string name="balance">均衡</string>
    <string name="performance">性能</string>
    <string name="fast">极速</string>

    <string name="system_mode">全局性能模式</string>
    <string name="normal_mode">亮屏性能模式</string>
    <string name="standby_mode">待机性能模式</string>

    <string name="has_been_started">已启动</string>
    <string name="not_started">未启动</string>

    <string name="log_setting">管理日志</string>
    <string name="look_log">查看日志</string>

    <string name="powersave_mode">省电模式</string>
    <string name="balance_mode">均衡模式</string>
    <string name="performance_mode">性能模式</string>
    <string name="fast_mode">极速模式</string>
    <string name="system_normal_mode">全局默认</string>

    <string name="latencyTime">升频延迟(ms)</string>
    <string name="slowLimitPower">CPU长期功耗(w)</string>
    <string name="fastLimitPower">CPU短期功耗(w)</string>
    <string name="fastLimitCapacity">CPU短期功耗限制容量(ws)</string>
    <string name="cpu_margin">CPU性能余量(%)</string>

    <string name="all">全部</string>
    <string name="user">用户</string>
    <string name="system">系统</string>

    <string name="uperf_settings">Uperf Settings</string>
    <string name="uperf_app_settings">Uperf App Settings</string>
    <string name="uperf_power_settings">Uperf Power Settings</string>

    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string name="read_file_fail">读取配置文件失败</string>
    <string name="write_file_fail">写入配置文件失败</string>
    <string name="read_log_file_fail">读取日志文件失败</string>

    <string name="cannot_open_app_setting">其它功能需要安装模块后才能使用</string>

    <string name="unit_ms">%.0f ms</string>
    <string name="unit_power">%.1f w</string>
    <string name="unit_percent">%.0f %%</string>
    <string name="unit_power_s">%.0f ws</string>

    <string name="main_color">主要颜色</string>
    <string name="color_blue">皇室蓝</string>
    <string name="color_orange">橘子橙</string>
    <string name="color_yellow">阳光黄</string>
    <string name="color_green">自然绿</string>
    <string name="color_red">姨妈红</string>

    <string name="slider_theme">滑动条样式</string>
    <string name="slider_normal">默认</string>
    <string name="slider_bilibili">哔哩哔哩</string>

    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="copy_fail">复制失败</string>

    <string name="parse_fail">解析失败</string>
    <string name="parse_success">解析成功</string>

    <string name="power_share">配置粘贴</string>
</resources>