<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="15sp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/main_color"

            android:textStyle="bold"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/more_colors"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10sp"

            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:buttonTint="@color/blue_theme"

                android:text="@string/color_blue" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:buttonTint="@color/orange_theme"

                android:text="@string/color_orange" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:buttonTint="@color/yellow_theme"

                android:text="@string/color_yellow" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:buttonTint="@color/green_theme"

                android:text="@string/color_green" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:buttonTint="@color/red_theme"

                android:text="@string/color_red" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/slider_theme"

            android:textStyle="bold"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/more_slider_themes"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/slider_normal" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/slider_bilibili" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/toast_dialog_ok"

        android:layout_margin="20sp"

        android:layout_height="wrap_content"
        android:layout_width="200dp"

        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button"

        android:layout_gravity="end"/>

</LinearLayout>