<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/setting_refresh"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"

            android:layout_width="match_parent"
            android:layout_height="100sp"

            app:cardElevation="3sp"
            app:cardCornerRadius="15sp"
            android:translationZ="1sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/module_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/not_started"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp" />

                <TextView
                    android:id="@+id/uperf_name"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"/>

                <TextView
                    android:id="@+id/uperf_author"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"/>

                <TextView
                    android:id="@+id/uperf_version"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/module_setting"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardElevation="3sp"
                app:cardCornerRadius="15sp"
                android:translationZ="1sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- 性能模式 !-->

                    <TextView
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/system_mode"/>

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/system_mode"

                        android:layout_margin="10sp"

                        android:layout_width="match_parent"
                        android:layout_height="50sp"

                        app:tabIndicatorFullWidth="true"
                        app:tabGravity="fill"

                        app:tabIndicator="@drawable/tab_indicator"
                        app:tabIndicatorHeight="50sp"

                        app:tabIndicatorColor="?attr/main_theme_color"

                        android:background="@drawable/stroke_round"

                        style="@style/mode_menu_color"/>

                    <LinearLayout
                        android:id="@+id/auto_mode_setting"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_marginStart="10sp"
                            android:layout_marginTop="10sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/normal_mode"/>

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/normal_mode"

                            android:layout_margin="10sp"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"

                            app:tabIndicatorFullWidth="true"
                            app:tabGravity="fill"

                            app:tabIndicator="@drawable/tab_indicator"
                            app:tabIndicatorHeight="50dp"

                            app:tabIndicatorColor="?attr/main_theme_color"

                            android:background="@drawable/stroke_round"

                            style="@style/mode_menu_color"/>

                        <TextView
                            android:layout_marginStart="10sp"
                            android:layout_marginTop="10sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/standby_mode"/>

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/standyby_mode"

                            android:layout_margin="10sp"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"

                            app:tabIndicatorFullWidth="true"
                            app:tabGravity="fill"

                            app:tabIndicator="@drawable/tab_indicator"
                            app:tabIndicatorHeight="50dp"

                            app:tabIndicatorColor="?attr/main_theme_color"

                            android:background="@drawable/stroke_round"

                            style="@style/mode_menu_color"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardElevation="3sp"
                app:cardCornerRadius="15sp"
                android:translationZ="1sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/log_setting"/>

                    <Button
                        android:id="@+id/open_log"
                        android:layout_margin="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:textColor="@android:color/white"
                        android:text="@string/look_log"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>